[package]
name = "dibi"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A lightweight and universal database driver"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.13", features = ["codec"] }
tracing = { version = "0.1.41", optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
