[package]
name = "dibi"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A lightweight and universal database driver"

[dependencies]
bitflags = "2.6.0"
bytes = "1.9.0"
futures = "0.3.31"
sha1 = "0.10.6"
thiserror = "2.0.9"

tokio = { version = "1.42.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec"] }
tracing = { version = "0.1.41", optional = true }

# Will remove this
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
